--- a/CalibrationLab.Core/CalibrationLab.Core.csproj
+++ b/CalibrationLab.Core/CalibrationLab.Core.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Concrete\" />
+    <Folder Include="HelperClasses\" />
+    <Folder Include="Marker\" />
   </ItemGroup>
 
 </Project>
